--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,39 +1,38 @@
-# ===== Core API =====
-fastapi==0.110.0
-uvicorn[standard]==0.29.0
+# ===== Core =====
+fastapi
+uvicorn[standard]
 
 # ===== Database =====
-SQLAlchemy==2.0.29
-alembic==1.13.1
-pymysql==1.1.0              # MariaDB / MySQL driver
-python-dotenv==1.0.1        # env config
+sqlalchemy
+alembic
+pymysql
+python-dotenv
 
-# ===== Validation & Schema =====
-pydantic==2.6.4
-pydantic-settings==2.2.1
+# ===== Validation =====
+pydantic
+pydantic-settings
 
 # ===== Auth & Security =====
-python-jose==3.3.0          # JWT
-passlib[bcrypt]==1.7.4
-fastapi-security==0.5.0
+python-jose
+passlib[bcrypt]
 
-# ===== File Upload / Storage =====
-python-multipart==0.0.9
-aiofiles==23.2.1
-
-# ===== Background / Async =====
-celery==5.3.6               # optional (xử lý nặng, gửi mail)
-redis==5.0.3                # broker cho Celery
+# ===== File / Upload =====
+python-multipart
+aiofiles
 
 # ===== Email =====
-fastapi-mail==1.4.1
+fastapi-mail
+
+# ===== Background tasks =====
+celery
+redis
 
 # ===== Utils =====
-qrcode[pil]==7.4.2
-Pillow==10.2.0
-python-dateutil==2.9.0
-rich==13.7.1                # logging đẹp khi dev
+qrcode[pil]
+pillow
+python-dateutil
+rich
 
 # ===== Testing =====
-pytest==8.1.1
-httpx==0.27.0
+pytest
+httpx
