--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@ant-design/pro-components": "^2.8.10",
     "@tabler/icons-react": "^3.36.1",
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.21",
     "antd": "^6.2.2",
     "axios": "^1.13.4",
     "react": "^19.2.0",
